massive refactoring & optimizations